err/robotframework-debuglibrary.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prompt_toolkit'...
Listing './lib/python3.5/site-packages/prompt_toolkit/clipboard'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/completers'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/regular_languages'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/telnet'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/validators'...
Listing './lib/python3.5/site-packages/prompt_toolkit/eventloop'...
Listing './lib/python3.5/site-packages/prompt_toolkit/filters'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding/bindings'...
Listing './lib/python3.5/site-packages/prompt_toolkit/layout'...
Listing './lib/python3.5/site-packages/prompt_toolkit/styles'...
Listing './lib/python3.5/site-packages/prompt_toolkit/terminal'...
Listing './lib/python3.5/site-packages/prompt_toolkit-1.0.15.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/robot'...
Listing './lib/python3.5/site-packages/robot/api'...
Listing './lib/python3.5/site-packages/robot/conf'...
Listing './lib/python3.5/site-packages/robot/htmldata'...
Listing './lib/python3.5/site-packages/robot/htmldata/common'...
Listing './lib/python3.5/site-packages/robot/htmldata/lib'...
Listing './lib/python3.5/site-packages/robot/htmldata/libdoc'...
Listing './lib/python3.5/site-packages/robot/htmldata/rebot'...
Listing './lib/python3.5/site-packages/robot/htmldata/testdoc'...
Listing './lib/python3.5/site-packages/robot/libdocpkg'...
Listing './lib/python3.5/site-packages/robot/libraries'...
Listing './lib/python3.5/site-packages/robot/model'...
Listing './lib/python3.5/site-packages/robot/output'...
Listing './lib/python3.5/site-packages/robot/output/console'...
Listing './lib/python3.5/site-packages/robot/parsing'...
Listing './lib/python3.5/site-packages/robot/reporting'...
Listing './lib/python3.5/site-packages/robot/result'...
Listing './lib/python3.5/site-packages/robot/running'...
Listing './lib/python3.5/site-packages/robot/running/arguments'...
Listing './lib/python3.5/site-packages/robot/running/timeouts'...
Compiling './lib/python3.5/site-packages/robot/running/timeouts/ironpython.py'...
***   File "./lib/python3.5/site-packages/robot/running/timeouts/ironpython.py", line 56
    raise self._error[0], self._error[1], self._error[2]
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robot/running/timeouts/jython.py'...
***   File "./lib/python3.5/site-packages/robot/running/timeouts/jython.py", line 55
    raise self._error[0], self._error[1], self._error[2]
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robot/utils'...
Listing './lib/python3.5/site-packages/robot/variables'...
Listing './lib/python3.5/site-packages/robot/writer'...
Listing './lib/python3.5/site-packages/robotframework-3.0.2.egg-info'...
Listing './lib/python3.5/site-packages/robotframework_debuglibrary-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
